021105	Added PACKED to unicode_char declaration (Arm)
021104	Support for geometry-less Atari disks
	Support for byte-swapping disks
021102b	Avoid .(l and .)l in generated man pages
021102	-i flag
	Fix mformat for 2m
	Fix [] wildcard off-by-one error
	Avoid overwriting (Unix) file by itself in mcopy
	Avoid cloberring any file if implicit target is used (the
	one-argument syntax of mcopy)
	Added Zip 750 entry to mzip.c
	SCO Scsi fix
020125	Fixes for cygwin
	Fixes in buffer.c for oddly sized image files
	Mformat.c fixes to avoid makeing images which would not be
	readable in windows.
010908	Warn for invalid partition numbers
010526	Released pre6-3.9.8 : getting rid of linux-gnu references is
	almost as difficult as exorcising the devil...
010526	Released pre5-3.9.8 after fixing a couple of version numbers
010526	Applied Adrian Bunk's patches, minus the Stallmanisms.
	De-stallmanized config.gues and config.sub files
	pre4-3.9.8
010521	Fixed DELMARK translation of mcopy's -T option, pre3-3.9.8
010521	Fixed #ifdef DEBUG statements, pre2-3.9.8
010520	Released pre-3.9.8
010507	Updated config.guess/config.sub to support Darwin
	Patch for converting contents of files from/to Dos' version of
	8bit Ascii
	Fixed bug in to_unix function
010330	Updated freebsd floppy device definitions
010325	Fixes for floppyd to work with current protocol version of floppyd
010325	Fixed parsing of Unix filenames ending with slash
010325	Fixed file closing of floppyd
001213	Fixed a cindex entry in documentation
001113	Rewrote PDF rule to use pdflatex, rather than go through dvi
	(pdflatex output looks nicer)
001113	Fixed JAZ Zip file overwrite bug (actually, this bug could occur
	on any disk reasonably full...)
001018	Fix mzip manpage to include Linux in the list of supported OS'es
001009	Protect against division by zero when reading BSD disks...
000829	Documentation fixes
000820	Hurd openflags fix in mainloop.c
	Added description for t option to mcopy man page